--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,7 @@
   <h1>Comic book TV shows</h1>
   <h2>TV shows currently on air based on comic books</h2>
 
-  <%# <nav bar> with HOME, LOGIN/SIGNUP, THEME SWITCHER %>
+  <%# <nav bar> with HOME, LOGIN/SIGNUP, SUGGESTIONS, THEME SWITCHER %>
 
 
 
