skeleton model completed

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Comic books based TV shows</title>
+  <title>TV shows based on Comic Books</title>
   <link rel='stylesheet' href='/stylesheets/main.css'>
   <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 </head>
@@ -11,13 +11,21 @@
   <h1>Comic book TV shows</h1>
   <h2>TV shows currently on air based on comic books</h2>
 
-  <%# <nav bar> with HOME, LOGIN/SIGNUP, SUGGESTIONS, THEME SWITCHER %>
+  <a href="/">HOME</a> 
+  <a href="/login">LOGIN/SIGNUP</a> 
+  <a href="/suggestions">SUGGESTIONS</a> 
+  <a href="/new">ADD SHOW</a>
+  <a href="">ARCHIVE</a> 
+  <a href="">THEME SWITCHER</a>
+  <br>
+  <br>
+
+  
 
 
 
 
-
-  <%= yield %>
+<%= yield %>
 
 </body>
 </html>
