--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,7 +20,15 @@
   <br>
   <br>
 
-  
+  <% if logged_in? %>
+    logged in as <%= current_user.email %>
+    <form action="/session" method="post">
+      <input type="hidden" name="_method" value="delete">
+    <button>logout</button>
+    </form>
+  <% else %>
+    <a href="/login">login</a>
+  <% end %>
 
 
 
