--- a/views/login.erb
+++ b/views/login.erb
@@ -1,4 +1,4 @@
-<h2> Signup / Login </h2>
+<h2> Login </h2>
 
 <form action="/session" method="post">
 
@@ -11,3 +11,5 @@
   <button>Submit!</button>
 
 </form>
+
+<a href="/signup">Signup here</a>
