some css stylings done

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
+<div class="shows-layout">
 
 <% @shows.each do |show| %>
 
@@ -7,5 +8,5 @@
   <img src="<%= show.image_url %>" alt="">
 
 <% end %>
-<br>
-<br>
+
+</div>
