--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,20 +8,29 @@
 </head>
 <body>
 
-  <h1>Comic book TV shows</h1>
-  <h2>TV shows currently on air based on comic books</h2>
+<h1>
+  <span class="main-heading">Comic book TV shows</span>
+</h1>
 
-  <a href="/">HOME</a> 
-  <a href="/login">LOGIN/SIGNUP</a> 
-  <a href="/suggestions">SUGGESTIONS</a> 
-  <% if logged_in? && current_user.admin? %>
-  <a href="/new">ADD SHOW</a>
-  <% end %>
-  <a href="">ARCHIVE</a> 
-  <a href="">THEME SWITCHER</a>
-  <br>
-  <br>
+<h2>
+  <span class="sec-heading">TV shows currently on air based on comic books</span>
+</h2>
 
+<nav>
+  <ul class="header-nav">
+    <li><a href="/">HOME</a></li>
+    <li><a href="/login">LOGIN</a></li>
+    <li><a href="/signup">SIGNUP</a></li>
+    <li><a href="/suggestions">SUGGESTIONS</a></li>
+    <% if logged_in? && current_user.admin? %>
+    <li><a href="/new">ADD SHOW</a></li>
+    <% end %>
+    <li><a href="/">ARCHIVE</a></li>
+    <li><a href="/">THEME SWITCHER</a></li>
+  </ul>
+</nav>
+
+<main>
   <% if logged_in? %>
     logged in as <%= current_user.email %>
     <form action="/session" method="post">
@@ -31,8 +40,8 @@
   <% else %>
     <a href="/login">login</a>
   <% end %>
-
-
+<br>
+</main>
 
 
 <%= yield %>
