--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -62,4 +62,17 @@ h3 {
   text-shadow: 5px 5px 1px rgba(0, 145, 255);
 }
 
+.shows-layout {
+  display: flex;
+  height: 100%;
+  padding: 50px;
+  align-content: flex-start;
+  overflow: scroll;
+  align-items: stretch;
+}
 
+.shows-layout img {
+  height:100%;
+  width: 320px;
+  display: block;
+}
