--- a/views/new.erb
+++ b/views/new.erb
@@ -1,19 +1,23 @@
 <h3>Add a new show here...</h3>
 
+<div class="login-page">
+
 <form action="/shows" method="post">
 
-  <label for="">Show title:</label>
-  <input name="title" type="text">
+  <p><label for="">Show title:</label>
+  <input name="title" type="text"></p>
 
-  <label for="">On air since:</label>
-  <input name="year" type="text">
+  <p><label for="">On air since:</label>
+  <input name="year" type="text"></p>
 
-  <label for="">Image URL:</label>
-  <input name="image_url" type="text">
+  <p><label for="">Image URL:</label>
+  <input name="image_url" type="text"></p>
 
-  <label for="">Show description:</label>
-  <input name="body" type="text">
+  <p><label for="">Show description:</label>
+  <input name="body" type="text"></p>
 
   <button>ADD!!</button>
 
 </form>
+
+</div>
