--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -74,6 +74,7 @@ h2 {
   padding: 20px;
   width: 100%;
   font-size: 30px;
+  color: red;
 }
 
 .header-nav li:last-child a {
@@ -82,6 +83,7 @@ h2 {
 
 li a:hover {
   background-color: red;
+  color: rgba(0, 145, 255);
 }
 
 .shows-layout {
@@ -106,7 +108,7 @@ li a:hover {
 h3 {
   text-align: center;
   color: red;
-  font-size: 50px;
+  font-size: 60px;
   margin: 0 auto;
   padding: 20px;
   letter-spacing: 5px;
@@ -159,3 +161,54 @@ h3 {
   background-color: rgba(0, 145, 255);
   border: 1px solid black;
 }
+
+.suggestions p {
+  font-size: 30px;
+  text-align: center;
+}
+
+.suggestion-table {
+  text-align: center;
+  border: 1px solid black;
+  border-bottom: 0;
+  background-color: rgba(0, 145, 255, 0.5);
+}
+
+.suggestion-table button {
+  padding: 8px 8px;
+  letter-spacing: 1px;
+  font-size: 18px;
+  color: red;
+  background-color: rgba(0, 145, 255);
+  border: 1px solid black;
+}
+
+.login-page p {
+  font-size: 40px;
+}
+
+.login-page button {
+  padding: 8px 8px;
+  letter-spacing: 1px;
+  font-size: 18px;
+  color: red;
+  background-color: rgba(0, 145, 255);
+  border: 1px solid black;
+}
+
+.login-page button:hover {
+  box-shadow: 0px 0px 10px rgba(0, 145, 255, 1);
+}
+
+.login-page a {
+  font-size: 30px;
+  text-decoration: none;
+  letter-spacing: 1px;
+  color: red;
+  text-shadow: -1px 0 black, 0 0.5px black, 1px 0 black, 0 -1px black;
+}
+
+.login-page a:hover {
+  text-shadow: 2px 2px 1px rgba(0, 145, 255);
+}
+
