--- a/views/login.erb
+++ b/views/login.erb
@@ -1,15 +1,20 @@
-<h2> Login </h2>
+
+<h3> Login... </h3>
+
+<div class="login-page">
 
 <form action="/session" method="post">
 
-  <label for="">Email address: </label>
-  <input type="email" name="email">
+  <p><label for="">Email address: </label>
+  <input type="email" name="email"></p>
+  <p><label for="">Password: </label>
+  <input type="password" name="password"></p>
 
-  <label for="">Password: </label>
-  <input type="password" name="password">
-
-  <button>Submit!</button>
+  <button>Welcome back!</button>
 
 </form>
+<br>
+<br>
+<a href="/signup">or go to our Signup here!</a>
 
-<a href="/signup">Signup here</a>
+</div>
