--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,13 +1,20 @@
 <h3>Signup here...</h3>
 
+<div class="login-page">
+
 <form action="/signup" method="post">
-
-  <label for="">Email:</label>
+  <p>
+  <label for="">Email Address:</label>
   <input name="email" type="email">
-
+  </p>
+  <p>
   <label for="">Password:</label>
   <input name="password" type="password">
-
+  </p>
   <button>Create!!</button>
-
 </form>
+<br>
+<br>
+<a href="/login">or go to our Login page here!</a>
+
+</div>
