--- a/views/error.erb
+++ b/views/error.erb
@@ -1,2 +1,8 @@
-<h1>Uh oh... you can't do that...</h1>
+
+<h3>Uh oh... you can't do that...</h3>
+
+<div class="error-page">
+<p>
 go back to <a href='/'> home page </a> or would you like to <a href='/login'>login?</a>
+</p>
+</div>
