--- a/public/stylesheets/bw.css
+++ b/public/stylesheets/bw.css
@@ -4,51 +4,52 @@
 }
 
 body {
-  background-image: url("images/yellow_comic.jpg");
+  background-image: url("images/bw_comic.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 h1 {
-  color: red;
+  color: black;
   font-size: 100px;
   margin: 0 auto;
   letter-spacing: 8px;
-  text-shadow: 7px 7px 1px rgba(0, 145, 255);
+  text-shadow: 7px 7px 1px white;
 }
 
 .login a {
   font-size: 30px;
   text-decoration: none;
   letter-spacing: 1px;
-  color: red;
+  color: white;
   text-shadow: -1px 0 black, 0 0.5px black, 1px 0 black, 0 -1px black;
 }
 
 .login a:hover {
-  text-shadow: 2px 2px 1px rgba(0, 145, 255);
+  text-shadow: 2px 2px 1px white;
 }
 
 .login p {
   font-size: 18px;
+  color: black;
 }
 
 .login button {
   padding: 8px 8px;
   letter-spacing: 1px;
   font-size: 15px;
-  color: red;
-  background-color: rgba(0, 145, 255);
+  color: white;
+  background-color: black;
   border: 1px solid black;
 }
 
 .login button:hover {
-  box-shadow: 0px 0px 50px rgba(0, 145, 255, 1);
+  box-shadow: 0px 0px 50px white;
 }
 
 h2 {
   text-align: center;
-  color: red;
+  color: white;
   font-size: 50px;
   letter-spacing: 5px;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
@@ -67,30 +68,30 @@ h2 {
 
 .nav-group {
   text-decoration: none;
-  color: red;
+  color: white;
 }
 
 .nav-group li {
   display: inline-flex;
   padding: 10px;
   letter-spacing: 1px;
-  background-color: rgba(0, 145, 255);
+  background-color: black;
   border-radius: 10px;
 }
 
 .nav-group li:hover {
-  background-color: red;
-  box-shadow: 0px 0px 50px rgba(0, 145, 255, 1);
+  background-color:white;
+  box-shadow: 0px 0px 50px black;
 }
 
 .nav-group a {
   text-decoration: none;
   font-size: 30px;
-  color: red;
+  color: black;
 }
 
 .nav-group a:hover {
-  color: rgba(0, 145, 255);
+  color: white;
 }
 
 .btn-group button {
