--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>TV shows based on Comic Books</title>
-  <link id="switchtheme" rel='stylesheet' href='/stylesheets/main.css'>
+  <link id="switchtheme" rel='stylesheet' type="text/css" href="/stylesheets/main.css">
   <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 </head>
 <body>
@@ -45,9 +45,9 @@
     </div>
 
     <div class="btn-group">
-    <button id= "switchTheme" onclick="switchTheme('/stylesheets/blue.css')">blue</button>
-    <button id= "switchTheme" onclick="switchTheme('stylesheets/bw.css')">B&W</button>
-    <button id= "switchTheme" onclick="switchTheme('stylesheets/main.css')">yellow</button>
+    <button id= "switchTheme" onclick="setStyleSheet('/stylesheets/blue.css')">blue</button>
+    <button id= "switchTheme" onclick="setStyleSheet('/stylesheets/bw.css')">B&W</button>
+    <button id= "switchTheme" onclick="setStyleSheet('/stylesheets/main.css')">yellow</button>
     </div>
   
   </div>
