--- a/public/stylesheets/bw.css
+++ b/public/stylesheets/bw.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-image: url("images/bw_comic.jpg");
+  background-image: url("/stylesheets/images/bw_comic.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -26,7 +26,7 @@ h1 {
 }
 
 .login a:hover {
-  text-shadow: 2px 2px 1px white;
+  text-shadow: 2px 2px 1px black;
 }
 
 .login p {
@@ -87,26 +87,26 @@ h2 {
 .nav-group a {
   text-decoration: none;
   font-size: 30px;
-  color: black;
+  color: white;
 }
 
 .nav-group a:hover {
-  color: white;
+  color: black;
 }
 
 .btn-group button {
   padding: 10px;
   letter-spacing: 1px;
   font-size: 30px;
-  color: red;
-  background-color: rgba(0, 145, 255);
+  color: white;
+  background-color: black;
   border-radius: 10px;
 }
 
 .btn-group button:hover {
-  background-color: red;
-  color: rgba(0, 145, 255);
-  box-shadow: 0px 0px 50px rgba(0, 145, 255, 1);
+  background-color: white;
+  color: black;
+  box-shadow: 0px 0px 50px black;
 }
 
 .shows-layout {
@@ -125,17 +125,17 @@ h2 {
 }
 
 .shows-layout img:hover {
-  box-shadow: 0px 0px 50px rgba(0, 145, 255, 1);
+  box-shadow: 0px 0px 50px black;
 }
 
 h3 {
   text-align: center;
-  color: red;
+  color: black;
   font-size: 60px;
   margin: 0 auto;
   padding: 20px;
   letter-spacing: 5px;
-  text-shadow: 5px 5px 1px rgba(0, 145, 255);
+  text-shadow: 5px 5px 1px white;
 }
 
 .single-show img {
@@ -146,19 +146,21 @@ h3 {
 .single-show p {
   font-size: 40px;
   letter-spacing: 0.5px;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .single-show button {
   padding: 10px 10px;
   letter-spacing: 1px;
   font-size: 25px;
-  color: red;
-  background-color: rgba(0, 145, 255);
+  color: white;
+  background-color: black;
   border: 1px solid black;
 }
 
 .single-show button:hover {
-  box-shadow: 0px 0px 10px rgba(0, 145, 255, 1);
+  box-shadow: 0px 0px 10px black;
 }
 
 .single-show form {
@@ -169,83 +171,90 @@ h3 {
   text-align: center;
   border: 1px solid black;
   border-bottom: 0;
-  background-color: rgba(0, 145, 255, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .comments p {
   font-size: 30px;
+  color: white;
 }
 
 .comments button {
   padding: 8px 8px;
   letter-spacing: 1px;
   font-size: 18px;
-  color: red;
-  background-color: rgba(0, 145, 255);
+  color: black;
+  background-color: white;
   border: 1px solid black;
 }
 
 .suggestions p {
   font-size: 30px;
   text-align: center;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .suggestion-table {
   text-align: center;
   border: 1px solid black;
   border-bottom: 0;
-  background-color: rgba(0, 145, 255, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .suggestion-table button {
   padding: 8px 8px;
   letter-spacing: 1px;
   font-size: 18px;
-  color: red;
-  background-color: rgba(0, 145, 255);
+  color: black;
+  background-color: white;
   border: 1px solid black;
 }
 
 .login-page p {
   font-size: 40px;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .login-page button {
   padding: 8px 8px;
   letter-spacing: 1px;
   font-size: 18px;
-  color: red;
-  background-color: rgba(0, 145, 255);
+  color: black;
+  background-color: white;
   border: 1px solid black;
 }
 
 .login-page button:hover {
-  box-shadow: 0px 0px 10px rgba(0, 145, 255, 1);
+  box-shadow: 0px 0px 10px black;
 }
 
 .login-page a {
   font-size: 30px;
   text-decoration: none;
   letter-spacing: 1px;
-  color: red;
+  color: white;
   text-shadow: -1px 0 black, 0 0.5px black, 1px 0 black, 0 -1px black;
 }
 
 .login-page a:hover {
-  text-shadow: 2px 2px 1px rgba(0, 145, 255);
+  text-shadow: 2px 2px 1px black;
 }
 
 .error-page p {
   font-size: 30px;
   text-align: center;
+  color: white;
+  text-shadow: -1px 0 black, 0 0.5px black, 1px 0 black, 0 -1px black;
 }
 
 .error-page a {
   text-decoration: none;
-  color: red;
-  text-shadow: -1px 0 black, 0 0.5px black, 1px 0 black, 0 -1px black;
+  color: black;
+  text-shadow: -1px 0 white, 0 0.5px white, 1px 0 white, 0 -1px white;
 }
 
 .error-page a:hover {
-  text-shadow: 2px 2px 1px rgba(0, 145, 255);
+  text-shadow: 2px 2px 1px white;
 }
