--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-image: url("images/yellow_comic.jpg");
+  background-image: url("/stylesheets/images/yellow_comic.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
