added more readme and did minor changes

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -184,6 +184,10 @@ h3 {
   border: 1px solid black;
 }
 
+.comments button:hover {
+  box-shadow: 0px 0px 10px red;
+}
+
 .suggestions p {
   font-size: 30px;
   text-align: center;
@@ -203,6 +207,10 @@ h3 {
   color: red;
   background-color: rgba(0, 145, 255);
   border: 1px solid black;
+}
+
+.suggestion-table button:hover {
+  box-shadow: 0px 0px 10px red;
 }
 
 .login-page p {
