--- a/public/stylesheets/blue.css
+++ b/public/stylesheets/blue.css
@@ -105,7 +105,7 @@ h2 {
 
 .btn-group button:hover {
   background-color: red;
-  color: rgba(0, 145, 255);
+  color: rgba(255, 255, 0);
   box-shadow: 0px 0px 50px rgba(255, 255, 0, 1);
 }
 
@@ -146,8 +146,6 @@ h3 {
 .single-show p {
   font-size: 40px;
   letter-spacing: 0.5px;
-  color: darkgrey;
-  text-shadow: -1px 0 black, 0 0.5px black, 1px 0 black, 0 -1px black;
 }
 
 .single-show button {
@@ -187,11 +185,13 @@ h3 {
   border: 1px solid black;
 }
 
+.comments button:hover {
+  box-shadow: 0px 0px 10px rgba(255, 255, 0, 1);
+}
+
 .suggestions p {
   font-size: 30px;
   text-align: center;
-  color: darkgrey;
-  text-shadow: -1px 0 black, 0 0.5px black, 1px 0 black, 0 -1px black;
 }
 
 .suggestion-table {
@@ -210,10 +210,12 @@ h3 {
   border: 1px solid black;
 }
 
+.suggestion-table button:hover {
+  box-shadow: 0px 0px 10px rgba(255, 255, 0, 1);
+}
+
 .login-page p {
   font-size: 40px;
-  color: darkgrey;
-  text-shadow: -1px 0 black, 0 0.5px black, 1px 0 black, 0 -1px black;
 }
 
 .login-page button {
@@ -244,8 +246,6 @@ h3 {
 .error-page p {
   font-size: 30px;
   text-align: center;
-  color: darkgrey;
-  text-shadow: -1px 0 black, 0 0.5px black, 1px 0 black, 0 -1px black;
 }
 
 .error-page a {
