--- a/public/stylesheets/bw.css
+++ b/public/stylesheets/bw.css
@@ -188,6 +188,10 @@ h3 {
   border: 1px solid black;
 }
 
+.comments button:hover {
+  box-shadow: 0px 0px 10px white;
+}
+
 .suggestions p {
   font-size: 30px;
   text-align: center;
@@ -209,6 +213,10 @@ h3 {
   color: black;
   background-color: white;
   border: 1px solid black;
+}
+
+.suggestion-table button:hover {
+  box-shadow: 0px 0px 10px white;
 }
 
 .login-page p {
